# formation_and_coordination_of_UAV_and_UGV

./: README.md
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/: CMakeLists.txt  README.md  package.xml
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/cfg/: missionController.cfg
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/config/: formationConfig.yaml  missionConfig.yaml
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/include/: integration.h  mission_controller.h  robot_state.h  shared_definitions.h  swamControllerAlg.h
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/launch/: bringup_crazyflie_servers.launch  mission_controller.launch
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/msg/: coordination.msg  logData.msg  waypoint.msg
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/results/: General_comment
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/results/experiment_1_formation_3_uav/: parameters  result_crazyflie_1_logdata.bag  result_crazyflie_2_logdata.bag  result_crazyflie_3_logdata.bag
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/results/experiment_2_formation_3_uav_flocking/: parameters  result_crazyflie_1_logdata.bag  result_crazyflie_2_logdata.bag  result_crazyflie_3_logdata.bag
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/results/experiment_3_formation_3_uav_orientation/: parameters  result_crazyflie_1_logdata.bag  result_crazyflie_2_logdata.bag  result_crazyflie_3_logdata.bag
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/results/experiment_4_formation_3_uav_obstacle1/: result_crazyflie_1_logdata.bag  result_crazyflie_2_logdata.bag  result_crazyflie_3_logdata.bag
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/results/experiment_5_formation_3_uav_obstacle2/: parameters  result_crazyflie_1_logdata.bag  result_crazyflie_2_logdata.bag  result_crazyflie_3_logdata.bag
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/results/experiment_6_formation_3_uav_1_ugv/: result_crazyflie_1_logdata.bag  result_crazyflie_2_logdata.bag  result_crazyflie_3_logdata.bag  result_omniwheel_1_logdata.bag
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/results/experiment_6_formation_3_uav_2_ugv/: parameters  result_crazyflie_1_logdata.bag  result_crazyflie_2_logdata.bag  result_crazyflie_3_logdata.bag  result_omniwheel_1_logdata.bag  result_omniwheel_2_logdata.bag
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/scripts/: autonomy_test.py  model_ugv_data.py  plot_modelling_results.py  plot_real_experiment_pgf_plot.py  plot_results.py  plot_simulation_pgf_plot.py  type_1_trajectory_4_uavs.pgf
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/scripts/cache/: D29D12CF.json  E2229F02.json
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/scripts/result_plots/: exp1_formation_3_uav_distance.pgf  exp1_formation_3_uav_navigation.pgf  exp1_formation_3_uav_orientation.pgf  (+19 more)
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/src/: drone_node.cpp  mission_controller.cpp  omniwheel_node.cpp  robot_state.cpp  swamControllerAlg.cpp  test_controller.cpp  testbag.cpp
formation_coordination_uav_ugv/real_robot/coordination_formation_control_pkg/utils/: configure_omniwheels_as_master.bash
formation_coordination_uav_ugv/real_robot/talker/: CMakeLists.txt  package.xml
omniwheels_controller/: CMakeLists.txt  README.md  package.xml
omniwheels_controller/config/: omniwheels_config.yaml
omniwheels_controller/launch/: launch_controller.launch
omniwheels_controller/scripts/: Buffer.py  SimplePI.py  crazyflie_logger_node.py  omni_wheel_controller_node.py  test.py
omniwheels_controller/utils/: configure_ros_master.bash
(+506 files in other folders)
